# random_number_generator

./: .gitignore  Cargo.toml
.github/workflows/: push.yml  test.yml
src/: main.rs
src/rng_generator/: mod.rs
