[package]
name = "random_number_selector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rns"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
