[package]
name = "random_number_selector"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rns"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
itertools = "0.12.1"
rand = "0.8.5"
